# comparison-tools

./: .env.example  .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  ENVIRONMENT_SECURITY.md  GOOGLE_OAUTH_SETUP.md  PLAN.md  README.md  SEATS_AERO_IMPLEMENTATION.md  STRIPE_SETUP.md  app.yaml  create_og_image.html  deploy-with-oauth.sh  enable-apis.sh  firebase_auth_example.html  main.py  migrate_to_firestore.py  pyproject.toml  requirements.txt  smart-deploy-oauth.sh  test_firestore.py
.github/: dependabot.yml
.github/workflows/: add-dependabot-reviewer.yml  autofix.yml  django.yml  sync-requirements.yml
apartments/: admin.py  auth_backends.py  auth_utils.py  context_processors.py  distance_service.py  firestore_service.py  forms.py  geocoding_service.py  google_maps_service.py  middleware.py  models.py  scoring_service.py  sitemaps.py  social_auth_pipeline.py  stripe_service.py  tests.py  urls.py  views.py
apartments/management/commands/: clear_firestore.py  firestore_admin.py  init_db.py  list_users.py  migrate_apartment_user_ids.py  migrate_users_to_firestore.py  seed_products.py
apartments/migrations/: 0001_initial.py  0002_remove_apartment_latitude_remove_apartment_longitude_and_more.py  0003_alter_userpreferences_distance_weight_and_more.py  0004_alter_userpreferences_discount_calculation_and_more.py  0005_product_remove_userprofile_stripe_subscription_id_and_more.py  0006_add_favorite_places.py  0007_add_bedrooms_bathrooms.py  0008_userpreferences_bathrooms_weight_and_more.py  0009_apartmentdistance_transit_fare_and_more.py  0010_remove_favoriteplace_arrival_time_and_more.py  0011_change_discount_calculation_default_to_weekly.py  0012_add_discount_weight.py  0013_add_factor_order.py  0014_add_unique_apartment_name_per_user.py  0015_add_parking_utilities_view_balcony.py  0016_userpreferences_total_cost_weight_and_more.py  0017_add_price_per_sqft_basis.py  0018_add_pricing_sort_basis.py  0019_add_pro_tier_limit.py  0020_add_lifetime_billing_interval.py
apartments/templates/: coming_soon.html  home.html
apartments/templates/apartments/: apartment_form.html  base.html  dashboard.html  favorite_place_form.html  favorite_places.html  index.html  login.html  preferences_form.html  pricing.html  privacy.html  signup.html  terms.html
apartments/templatetags/: distance_filters.py
config/: settings.py  trace_middleware.py  urls.py
docs/: CUSTOM_DOMAIN_SETUP.md  GOOGLE_OAUTH_SETUP.md  PERFORMANCE_MONITORING.md  PREMIUM_FEATURES.md  README.md  STRIPE_SETUP.md  SUPABASE_SETUP.md
feedback/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
feedback/migrations/: 0001_initial.py
feedback/templates/feedback/: feature_form.html  feature_list.html  feedback_form.html
homes/: __init__.py  admin.py  csv_import.py  forms.py  mls_service.py  models.py  redfin_service.py  scoring_service.py  urls.py  views.py  zillow_service.py
homes/management/commands/: seed_products.py
homes/migrations/: 0001_initial.py  0002_remove_invite_code_unique_constraint.py  0003_change_invite_code_to_foreignkey.py
homes/templates/homes/: agent_dashboard.html  dashboard.html  enter_invite_code.html  favorite_places.html  generate_invite_code.html  home_form.html  import_redfin_csv.html  index.html  suggest_home.html  view_suggestions.html
scripts/: enable-apis.sh  setup-oauth.sh  setup-stripe-secrets.sh  validate-env-security.sh
static/: site.webmanifest
static/js/: address-autocomplete.js
