[project]
name = "comparison-tools"
version = "1.0.0"
description = "Smart comparison tools for apartments, homes, and hotels"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2",
    "django-browser-reload>=1.18.0",
    "django-environ>=0.11.2",
    "django-tailwind>=4.0.1",
    "gunicorn>=23.0.0",
    "social-auth-app-django>=5.4.2",
    "social-auth-core>=4.8.1",
    "google-cloud-secret-manager>=2.20.2",
    "google-auth>=2.34.0",
    "psycopg2-binary>=2.9.11",
    "stripe>=11.2.0",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*/migrations/*",
    "theme/",
    "static/",
    "staticfiles/",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "DJ",     # flake8-django
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "DJ001",  # avoid using null=True on string-based fields
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"config/settings.py" = ["F401", "F403", "F405"]  # settings wildcards
"main.py" = ["E402"]  # import after Django setup is intentional for App Engine

[tool.ruff.lint.isort]
known-first-party = ["apartments", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
